--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon/Logo1.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/Logo1.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Space+Grotesk&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZEBB - Digital Agency</title>
   </head>
   <body>
@@ -143,7 +143,6 @@
         <div>
           <button class="button">Learn more</button>
         </div>
-        </div>
       </div>
       <div class="sec-three__image">
         <img src="/images/DogJumpDoodle.png" alt="illustration" class="image_size-l">
@@ -229,7 +228,7 @@
           <img src="/images/2790681630.jpg" alt="illustration">
         </div>
         <div class="sec-work__image">
-          <img src="/images/Absurd Design - Free Surrealist Illustrations and Vector Art.jpg" alt="illustration">
+          <img src="/images/Absurd.jpg" alt="illustration">
         </div>
         <div class="sec-work__image">
           <img src="/images/2c80435b19fa10216c5514a7cb94e818.png" alt="illustration">
@@ -458,12 +457,12 @@
         <h2 class="text-h2 text_mob">Join Our <br>Newsletters & <br>get Coffe<br><span class="text_outline">Formula!</span></h2>
         <form class="sec-form__form form">
           <div class="form__inner">
-            <label for="name" class="form__label">Name</label>
-            <input type="text" id="name" name="name" class="form__input">
+            <label for="name2" class="form__label">Name</label>
+            <input type="text" id="name2" name="name2" class="form__input">
           </div>
           <div class="form__inner">
-            <label for="email" class="form__label">Email</label>
-            <input type="text" id="email" name="email" class="form__input">
+            <label for="email2" class="form__label">Email</label>
+            <input type="text" id="email2" name="email2" class="form__input">
           </div>
           <div>
             <button class="button button_wide" type="submit">Send</button>
