--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <button class="button">See our work</button>
       </div>
       <div class="header__image">
-        <img src="/images/CoffeeDoddle.png" alt="illustration" class="image_size-m">
+        <img src="/images/CoffeeDoddle.webp" alt="illustration" class="image_size-m">
       </div>
     </header>
 
@@ -62,13 +62,13 @@
         </div>
       </div>
       <div class="sec-one__image">
-        <img src="/images/MeditatingDoodle.png" alt="illustration" class="image_size-m">
+        <img src="/images/MeditatingDoodle.webp" alt="illustration" class="image_size-m">
       </div>
     </section>
 
     <section class="section sec-two">
       <div class="sec-two__image">
-        <img src="/images/MessyDoodle.png" alt="illustration" class="image_size-xl image_transparent">
+        <img src="/images/MessyDoodle.webp" alt="illustration" class="image_size-xl image_transparent">
       </div>
       <div class="sec-two__desc">
         <h2 class="text-h2 text_desk"><span class="text_outline">Things We Enjoy</span></h2>
@@ -146,7 +146,7 @@
         </div>
       </div>
       <div class="sec-three__image">
-        <img src="/images/DogJumpDoodle.png" alt="illustration" class="image_size-l">
+        <img src="/images/DogJumpDoodle.webp" alt="illustration" class="image_size-l">
       </div>
     </section>
 
@@ -158,7 +158,7 @@
       <div class="sec-team__content">
         <div class="card">
           <div class="card__image">
-            <img src="/images/1.png" alt="person">
+            <img src="/images/1.webp" alt="person">
           </div>
           <div class="card__desc">
             <h3 class="text-h3">Samantha Jones</h3>
@@ -167,7 +167,7 @@
         </div>
         <div class="card">
           <div class="card__image">
-            <img src="/images/2.png" alt="person">
+            <img src="/images/2.webp" alt="person">
           </div>
           <div class="card__desc">
             <h3 class="text-h3">Mark Ali</h3>
@@ -176,7 +176,7 @@
         </div>
         <div class="card">
           <div class="card__image">
-            <img src="/images/3.png" alt="person">
+            <img src="/images/3.webp" alt="person">
           </div>
           <div class="card__desc">
             <h3 class="text-h3">Davi John</h3>
@@ -185,7 +185,7 @@
         </div>
         <div class="card">
           <div class="card__image">
-            <img src="/images/4.png" alt="person">
+            <img src="/images/4.webp" alt="person">
           </div>
           <div class="card__desc">
             <h3 class="text-h3">John Daen</h3>
@@ -194,7 +194,7 @@
         </div>
         <div class="card">
           <div class="card__image">
-            <img src="/images/5.png" alt="person">
+            <img src="/images/5.webp" alt="person">
           </div>
           <div class="card__desc">
             <h3 class="text-h3">Alice Kate</h3>
@@ -203,7 +203,7 @@
         </div>
         <div class="card">
           <div class="card__image">
-            <img src="/images/6.png" alt="person">
+            <img src="/images/6.webp" alt="person">
           </div>
           <div class="card__desc">
             <h3 class="text-h3">Jhang Yui</h3>
@@ -226,22 +226,22 @@
       </div>
       <div class="sec-work__content">
         <div class="sec-work__image">
-          <img src="/images/2790681630.jpg" alt="illustration">
+          <img src="/images/2790681630.webp" alt="illustration">
         </div>
         <div class="sec-work__image">
-          <img src="/images/Absurd.jpg" alt="illustration">
+          <img src="/images/Absurd.webp" alt="illustration">
         </div>
         <div class="sec-work__image">
-          <img src="/images/2c80435b19fa10216c5514a7cb94e818.png" alt="illustration">
+          <img src="/images/2c80435b19fa10216c5514a7cb94e818.webp" alt="illustration">
         </div>
         <div class="sec-work__image">
-          <img src="/images/09.png" alt="illustration">
+          <img src="/images/09.webp" alt="illustration">
         </div>
         <div class="sec-work__image">
-          <img src="/images/211844.png" alt="illustration">
+          <img src="/images/211844.webp" alt="illustration">
         </div>
         <div class="sec-work__image">
-          <img src="/images/sdfgsdfgsdfghspng.png" alt="illustration">
+          <img src="/images/sdfgsdfgsdfghspng.webp" alt="illustration">
         </div>
       </div>
       <div class="sec-work__button">
@@ -259,7 +259,7 @@
           <div class="sec-testi__card card-testi">
             <div class="card-testi__content">
               <div class="card-testi__image">
-                <img src="/images/1.jpg" alt="person">
+                <img src="/images/001.webp" alt="person">
               </div>
               <div class="card-testi__rate">
                 <img src="/icons/star.svg" alt="star" class="icon_star">
@@ -281,7 +281,7 @@
           <div class="sec-testi__card card-testi">
             <div class="card-testi__content">
               <div class="card-testi__image">
-                <img src="/images/8.jpg" alt="person">
+                <img src="/images/008.webp" alt="person">
               </div>
               <div class="card-testi__rate">
                 <img src="/icons/star.svg" alt="star" class="icon_star">
@@ -303,7 +303,7 @@
           <div class="sec-testi__card card-testi">
             <div class="card-testi__content">
               <div class="card-testi__image">
-                <img src="/images/5.jpg" alt="person">
+                <img src="/images/005.webp" alt="person">
               </div>
               <div class="card-testi__rate">
                 <img src="/icons/star.svg" alt="star" class="icon_star">
@@ -325,7 +325,7 @@
           <div class="sec-testi__card card-testi card-testi_centered">
             <div class="card-testi__content">
               <div class="card-testi__image">
-                <img src="/images/2.jpg" alt="person">
+                <img src="/images/002.webp" alt="person">
               </div>
               <div class="card-testi__rate">
                 <img src="/icons/star.svg" alt="star" class="icon_star">
@@ -347,7 +347,7 @@
           <div class="sec-testi__card card-testi">
             <div class="card-testi__content">
               <div class="card-testi__image">
-                <img src="/images/3.jpg" alt="person">
+                <img src="/images/003.webp" alt="person">
               </div>
               <div class="card-testi__rate">
                 <img src="/icons/star.svg" alt="star" class="icon_star">
@@ -369,7 +369,7 @@
           <div class="sec-testi__card card-testi">
             <div class="card-testi__content">
               <div class="card-testi__image">
-                <img src="/images/4.jpg" alt="person">
+                <img src="/images/004.webp" alt="person">
               </div>
               <div class="card-testi__rate">
                 <img src="/icons/star.svg" alt="star" class="icon_star">
@@ -391,7 +391,7 @@
           <div class="sec-testi__card card-testi">
             <div class="card-testi__content">
               <div class="card-testi__image">
-                <img src="/images/9.jpg" alt="person">
+                <img src="/images/009.webp" alt="person">
               </div>
               <div class="card-testi__rate">
                 <img src="/icons/star.svg" alt="star" class="icon_star">
@@ -424,7 +424,7 @@
 
     <section class="section sec-form">
       <div class="sec-form__image">
-        <img src="/images/ZombieingDoodle.png" alt="illustration" class="image_size-l">
+        <img src="/images/ZombieingDoodle.webp" alt="illustration" class="image_size-l">
       </div>
       <div class="sec-form__content">
         <h2 class="text-h2 text_desk">Need Help Making <br>Coffee?<span class="text_outline">Contact Us</span></h2>
@@ -451,7 +451,7 @@
 
     <section class="section sec-form sec-form_two">
       <div class="sec-form__image">
-        <img src="/images/UnboxingDoodle.png" alt="illustration" class="image_size-l">
+        <img src="/images/UnboxingDoodle.webp" alt="illustration" class="image_size-l">
       </div>
       <div class="sec-form__content">
         <h2 class="text-h2 text_desk">Join Our Newsletters <br>& get<span class="text_outline">Coffee Formula!</span></h2>
@@ -475,10 +475,10 @@
     <footer class="footer">
       <div class="footer__content">
         <div class="footer__image footer__image_left">
-          <img src="/images/StrollingDoodle.png" alt="illustration" class="image_size-l image_transparent">
+          <img src="/images/StrollingDoodle.webp" alt="illustration" class="image_size-l image_transparent">
         </div>
         <div class="footer__image footer__image_right">
-          <img src="/images/RollerSkatingDoodle.png" alt="illustration" class="image_size-l image_transparent">
+          <img src="/images/RollerSkatingDoodle.webp" alt="illustration" class="image_size-l image_transparent">
         </div>
         <div class="footer__info">
           <div class="footer__logo">
